# SUMA

./: LICENSE  README.md
src/suma_api/: .run.sh.swp  CMakeLists.txt  DockerFile  README.md  run.sh  run.sh.save  sql.conf  swagger.yaml  test.db
src/suma_api/database/: user_data.db
src/suma_api/html/: index.html
src/suma_api/include/: sql3.h
src/suma_api/src/: k8s.c  main.c  parser.c  sql3.c  ssl.c  ssl.h  ssl_test.c
src/suma_api/src/html/: boil.c  script.js  style.css
src/suma_api/src/scripts/: c_user.sh  config.cfg  create_bind_role.sh  namespace.sh  node.sh
src/suma_api/tests/: sql.c  ssl.c  test.sh  wiregaurd.c
